sign up and sign up, and few extra features added in the members,complaints and schemes page

--- a/app/src/main/res/layout/activity_add_scheme.xml
+++ b/app/src/main/res/layout/activity_add_scheme.xml
@@ -56,6 +56,7 @@
                         android:textSize="16sp" />
                 </com.google.android.material.textfield.TextInputLayout>
 
+
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/genderlayout"
                     android:layout_width="match_parent"
@@ -68,10 +69,10 @@
                     app:hintTextColor="#00FFFF"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="1.0"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.435">
+                    app:layout_constraintVertical_bias="0.35">
+
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/inputscmdesc"
@@ -82,7 +83,6 @@
                         android:textColor="#FFFFFF"
                         android:textSize="16sp" />
                 </com.google.android.material.textfield.TextInputLayout>
-
 
                 <TextView
                     android:id="@+id/textView"
@@ -102,6 +102,33 @@
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintVertical_bias="0.087" />
 
+
+                <com.google.android.material.textfield.TextInputLayout
+
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginTop="25dp"
+                    android:layout_marginRight="20dp"
+                    android:padding="10dp"
+                    android:textColorHint="#FFFFFF"
+                    app:hintTextColor="#00FFFF"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintVertical_bias="0.619">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/inputscmurl"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="Enter the url of the Scheme"
+                        android:padding="15dp"
+                        android:textColor="#FFFFFF"
+                        android:textSize="16sp" />
+                </com.google.android.material.textfield.TextInputLayout>
+
                 <com.google.android.material.imageview.ShapeableImageView
                     android:id="@+id/inputscmimage"
                     android:layout_width="140dp"
@@ -111,10 +138,10 @@
                     android:src="@drawable/common_google_signin_btn_icon_dark_normal"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.205"
+                    app:layout_constraintHorizontal_bias="0.206"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.775"
+                    app:layout_constraintVertical_bias="0.867"
                     app:shapeAppearance="@style/roundrect"
                     app:strokeColor="@color/blueshade1"
                     app:strokeWidth="5dp"
@@ -128,10 +155,10 @@
                     android:text="Choose image"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.8"
+                    app:layout_constraintHorizontal_bias="0.805"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.753" />
+                    app:layout_constraintVertical_bias="0.84" />
 
                 <Button
                     android:id="@+id/scmsubmitbtn"
@@ -140,9 +167,10 @@
                     android:text="Submit"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.56"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintVertical_bias="0.96" />
+                    app:layout_constraintVertical_bias="0.967" />
 
                 <com.google.android.material.floatingactionbutton.FloatingActionButton
                     android:id="@+id/flbuttonback"
