--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -5,27 +5,31 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/blueshade1"
-    tools:context=".UserLog">
+    tools:context=".Forgot_Password">
 
     <TextView
         android:id="@+id/textView6"
-        android:layout_width="190dp"
-        android:layout_height="52dp"
+        android:layout_width="224dp"
+        android:layout_height="84dp"
+        android:layout_marginStart="148dp"
+        android:layout_marginTop="168dp"
+        android:layout_marginEnd="148dp"
+        android:layout_marginBottom="512dp"
         android:fontFamily="@font/audiowide"
-        android:text="User Login"
+        android:text="Forget Password"
         android:textAlignment="center"
         android:textColor="#00DDFF"
-        android:textSize="29sp"
+        android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintHorizontal_bias="0.568"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.119" />
+        app:layout_constraintVertical_bias="1.0" />
 
     <EditText
-        android:id="@+id/LogEmail"
+        android:id="@+id/ForgotPass"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
@@ -35,65 +39,40 @@
         android:textColorHint="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.547"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.314" />
-
-    <EditText
-        android:id="@+id/LogPass"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:hint="Password"
-        android:inputType="text"
-        android:textColor="#FFFFFF"
-        android:textColorHint="#FFFFFF"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.547"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.462" />
+        app:layout_constraintVertical_bias="0.463" />
 
     <Button
-        android:id="@+id/login"
+        android:id="@+id/reset"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:onClick="onClick2"
-        android:text="Login"
-        android:textColor="#FFFFFF"
-        app:backgroundTint="#AA00FF"
+        android:onClick="forgotPass"
+        android:text="reset"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.582" />
+        app:layout_constraintVertical_bias="0.638" />
 
     <TextView
-        android:id="@+id/toReg"
+        android:id="@+id/backToLogin"
         android:layout_width="125dp"
         android:layout_height="27dp"
-        android:text="Click To Register"
+        android:layout_marginStart="143dp"
+        android:layout_marginTop="48dp"
+        android:layout_marginEnd="143dp"
+        android:layout_marginBottom="115dp"
+        android:text="Back To Login"
         android:textAlignment="center"
         android:textColor="#FFFFFF"
+        android:textColorHint="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.703" />
-
-    <TextView
-        android:id="@+id/ForgotPass"
-        android:layout_width="125dp"
-        android:layout_height="27dp"
-        android:text="Forgot Password"
-        android:textAlignment="center"
-        android:textColor="#FFFFFF"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.789" />
+        app:layout_constraintVertical_bias="0.879" />
 </androidx.constraintlayout.widget.ConstraintLayout>
