--- a/app/src/main/res/layout/activity_user_reg.xml
+++ b/app/src/main/res/layout/activity_user_reg.xml
@@ -1,89 +1,10 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/blueshade1"
-    tools:context=".UserReg">
-
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="221dp"
-        android:layout_height="62dp"
-        android:fontFamily="@font/audiowide"
-        android:text="User Registration"
-        android:textAlignment="center"
-        android:textColor="#00DDFF"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.473"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.14" />
-
-
-    <EditText
-        android:id="@+id/regEmail"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:hint="Enter Email"
-        android:inputType="text"
-        android:textColor="#FFFFFF"
-        android:textColorHint="#FFFFFF"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.29" />
-
-    <EditText
-        android:id="@+id/regPass"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:hint="Enter Password"
-        android:inputType="text"
-        android:textColor="#FFFFFF"
-        android:textColorHint="#FFFFFF"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.427" />
-
-    <Button
-        android:id="@+id/btn_reg"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:onClick="onClick1"
-        android:text="Register"
-        android:textColor="#FFFFFF"
-        app:backgroundTint="#AA00FF"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.568" />
-
-    <TextView
-        android:id="@+id/click_to_log"
-        android:layout_width="129dp"
-        android:layout_height="25dp"
-        android:text="Click here to Login"
-        android:textAlignment="center"
-        android:textColor="#FFFFFF"
-        android:textColorHighlight="#FFFFFF"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.691" />
-
-
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent" android:layout_height="match_parent" android:background="@color/blueshade1" android:onClick="onClick1" tools:context=".UserReg">
+    <TextView android:id="@+id/textView3" android:layout_width="221dp" android:layout_height="62dp" android:fontFamily="@font/audiowide" android:text="User Registration" android:textAlignment="center" android:textColor="#00DDFF" android:textSize="24sp" android:textStyle="bold" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.473" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.14"/>
+    <EditText android:id="@+id/regEmail" android:layout_width="wrap_content" android:layout_height="wrap_content" android:ems="10" android:hint="Enter Email" android:inputType="text" android:textColor="#FFFFFF" android:textColorHint="#FFFFFF" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.497" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.565"/>
+    <EditText android:id="@+id/regPhone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:ems="10" android:hint="Enter Phone Number" android:inputType="text" android:textColor="#FFFFFF" android:textColorHint="#FFFFFF" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.497" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.37"/>
+    <EditText android:id="@+id/regName" android:layout_width="wrap_content" android:layout_height="wrap_content" android:ems="10" android:hint="Enter Full Name" android:inputType="text" android:textColor="#FFFFFF" android:textColorHint="#FFFFFF" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.497" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.281"/>
+    <EditText android:id="@+id/regAddress" android:layout_width="wrap_content" android:layout_height="wrap_content" android:ems="10" android:hint="Enter Address" android:inputType="text" android:textColor="#FFFFFF" android:textColorHint="#FFFFFF" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.502" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.463"/>
+    <EditText android:id="@+id/regPass" android:layout_width="wrap_content" android:layout_height="wrap_content" android:ems="10" android:hint="Enter Password" android:inputType="text" android:textColor="#FFFFFF" android:textColorHint="#FFFFFF" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.497" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.666"/>
+    <Button android:id="@+id/btn_reg" android:layout_width="wrap_content" android:layout_height="wrap_content" android:onClick="onClick1" android:text="Register" android:textColor="#FFFFFF" app:backgroundTint="#AA00FF" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.773"/>
+    <TextView android:id="@+id/click_to_log" android:layout_width="129dp" android:layout_height="25dp" android:text="Click here to Login" android:textAlignment="center" android:textColor="#FFFFFF" android:textColorHighlight="#FFFFFF" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.549" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.895"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
