--- a/app/src/main/res/layout/viewcomplaintmodel.xml
+++ b/app/src/main/res/layout/viewcomplaintmodel.xml
@@ -4,6 +4,7 @@
 
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginLeft="10dp"
@@ -24,25 +25,25 @@
 
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/setcompimg"
-            android:layout_width="150dp"
+            android:layout_width="220dp"
             android:layout_height="150dp"
 
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:layout_centerInParent="false"
             android:layout_gravity="center|center_vertical"
-            android:layout_marginStart="100dp"
+            android:layout_marginStart="60dp"
             android:layout_marginTop="70dp"
             android:foregroundGravity="center"
             android:padding="3dp"
             android:scaleType="centerCrop"
             android:src="@drawable/googleg_standard_color_18"
 
-            app:civ_border_color="#FF000000"
-            app:civ_border_width="1dp"
+            app:civ_border_color="#FF3D00"
+            app:civ_border_width="0dp"
             app:shapeAppearance="@style/roundrect"
             app:strokeColor="@color/blueshade1"
-            app:strokeWidth="5dp"
+            app:strokeWidth="4dp"
 
 
             />
@@ -79,31 +80,31 @@
             android:layout_centerHorizontal="false"
             android:layout_marginStart="0dp"
             android:layout_marginLeft="40dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="60dp"
             android:text="desc"
             android:textAlignment="viewStart"
             android:textColor="#FFFFFF"
             android:textSize="18sp"
             android:textStyle="bold" />
 
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/seencmpbtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginStart="280dp"
-            android:layout_marginTop="120dp"
+<!--        <com.google.android.material.floatingactionbutton.FloatingActionButton-->
+<!--            android:id="@+id/seencmpbtn"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_alignParentStart="true"-->
+<!--            android:layout_alignParentTop="true"-->
+<!--            android:layout_marginStart="280dp"-->
+<!--            android:layout_marginTop="120dp"-->
 
-            android:clickable="true"
-            app:backgroundTint="#64DD17"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.828"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.918"
-            app:srcCompat="@drawable/seen" />
+<!--            android:clickable="true"-->
+<!--            app:backgroundTint="#64DD17"-->
+<!--            app:layout_constraintBottom_toBottomOf="parent"-->
+<!--            app:layout_constraintEnd_toEndOf="parent"-->
+<!--            app:layout_constraintHorizontal_bias="0.828"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintTop_toTopOf="parent"-->
+<!--            app:layout_constraintVertical_bias="0.918"-->
+<!--            app:srcCompat="@drawable/seen" />-->
 
 
         <TextView
@@ -122,6 +123,101 @@
             android:textSize="18sp"
             android:textStyle="bold" />
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignWithParentIfMissing="false"
+            android:layout_below="@id/setcompimg"
+            android:layout_centerInParent="false"
+            android:layout_centerHorizontal="false"
+            android:layout_marginStart="0dp"
+            android:layout_marginLeft="40dp"
+            android:layout_marginTop="20dp"
+            android:text="Complaint by :"
+            android:textAlignment="viewStart"
+            android:textColor="#00DDFF"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+
+
+        <TextView
+            android:id="@+id/cname"
+            android:layout_width="207dp"
+            android:layout_height="wrap_content"
+            android:layout_alignWithParentIfMissing="false"
+            android:layout_below="@id/setcompimg"
+            android:layout_centerInParent="false"
+            android:layout_centerHorizontal="false"
+            android:layout_marginStart="120dp"
+            android:layout_marginTop="20dp"
+
+            android:text="hahahh"
+            android:textAlignment="viewStart"
+            android:textColor="#FF6D00"
+            android:textSize="18sp" />
+
+
+        <TextView
+            android:id="@+id/pdo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/setcompdesc"
+            android:layout_marginStart="0dp"
+            android:layout_marginTop="15dp"
+            android:text="Reply to the complaint :"
+            android:textAlignment="viewStart"
+            android:textColor="#00DDFF"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/pdorply"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/pdo"
+            android:layout_marginStart="1dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="10dp"
+            android:textAlignment="viewStart"
+            android:textColor="#FFFFFF"
+            android:textSize="18sp" />
+
+
+        <com.google.android.material.textfield.TextInputLayout
+
+            android:id="@+id/textlayout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/pdorply"
+            android:layout_marginStart="0dp"
+            android:layout_marginTop="0dp"
+            android:layout_marginRight="20dp"
+            android:padding="10dp"
+            android:textColorHint="#FFFFFF"
+            app:hintTextColor="#00FFFF">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/rplytocomplaint"
+                android:layout_width="330dp"
+                android:layout_height="45dp"
+                android:hint="write here..."
+                android:padding="15dp"
+                android:textColor="#FFFFFF"
+                android:textSize="16sp" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <Button
+            android:id="@+id/comprplysubmitbtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/pdorply"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="false"
+            android:layout_marginTop="80dp"
+            android:layout_marginEnd="150dp"
+            android:text="Reply"
+            android:textColor="#FFFFFF"
+            app:backgroundTint="#64DD17" />
 
 
     </RelativeLayout>
