--- a/app/src/main/res/layout/viewschemesmodel.xml
+++ b/app/src/main/res/layout/viewschemesmodel.xml
@@ -86,6 +86,47 @@
             android:textSize="18sp"
             android:textStyle="bold" />
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignWithParentIfMissing="true"
+            android:layout_below="@id/setscmdesc"
+            android:layout_alignParentStart="false"
+            android:layout_alignParentLeft="false"
+            android:layout_alignParentTop="false"
+            android:layout_alignParentEnd="false"
+            android:layout_alignParentRight="false"
+            android:layout_alignParentBottom="false"
+            android:layout_marginTop="26dp"
+            android:text="website link :"
+            android:textAlignment="viewStart"
+            android:textColor="#FFAB00"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/setscmurl"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignWithParentIfMissing="true"
+            android:layout_below="@id/setscmdesc"
+            android:layout_alignParentStart="false"
+            android:layout_alignParentLeft="false"
+            android:layout_alignParentTop="false"
+            android:layout_alignParentEnd="false"
+            android:layout_alignParentRight="false"
+            android:layout_alignParentBottom="false"
+            android:layout_marginTop="45dp"
+            android:layout_marginBottom="20dp"
+            android:autoLink="web"
+            android:text="kkkkk"
+            android:textAllCaps="false"
+            android:textColor="#00DDFF"
+            android:textColorHighlight="#00DDFF"
+            android:textColorLink="#00DDFF"
+            android:textSize="18sp"
+            android:textStyle="normal" />
+
     </RelativeLayout>
 
 </androidx.cardview.widget.CardView>
