--- a/app/src/main/res/layout/activity_add_scheme.xml
+++ b/app/src/main/res/layout/activity_add_scheme.xml
@@ -78,6 +78,7 @@
                         android:id="@+id/inputscmdesc"
                         android:layout_width="match_parent"
                         android:layout_height="200dp"
+                        android:gravity="top"
                         android:hint="Enter the discription here.."
                         android:padding="15dp"
                         android:textColor="#FFFFFF"
