--- a/app/src/main/res/layout/schemesmodel.xml
+++ b/app/src/main/res/layout/schemesmodel.xml
@@ -56,7 +56,7 @@
 
         <TextView
             android:id="@+id/setscmtitle"
-            android:layout_width="match_parent"
+            android:layout_width="330dp"
             android:layout_height="wrap_content"
             android:layout_alignWithParentIfMissing="false"
             android:layout_alignParentStart="false"
